--- a/App/style.css
+++ b/App/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #00bad2;
+    background: #c9dbdd;
 }
 
 .watch {
@@ -8,9 +8,10 @@ body {
     margin: 0 4em;
 }
 
+
 .watch_face {
-    height: 15em;
-    width: 15em;
+    height: 240px;
+    width: 240px;
     border-radius: 50%;
     background: #222;
     border: 8px solid #999;
@@ -52,40 +53,17 @@ body {
     height: 8.5em;
 }
 
-.screen_image {
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    top: -15em;
-}
-
 .text-center {
     text-align: center;
 }
 
-div.circle {
-    position: absolute;
-    z-index: 99;
+iframe {
+    position: relative;
+    z-index: 98;
     border-radius: 50%;
-    height: 96.75%;
-    width: 96.75%;
-    border: 4px solid #555;
-    cursor: pointer;
-}
-
-
-#red {
-    background: red;
-}
-
-#green {
-    background: green;
-    clip-path: polygon(-80% 180%, 50% 50%, 180% 180%, -80% 180%);
-}
-
-#blue {
-    background: blue;
-    clip-path: polygon(-80% 0%, 50% 0%, 50% 50%, -80% 180%);
+    height: 232.2px;
+    width: 232.2px;
+    border: 0px;
+    list-style: none;
+    overflow: hidden;
 }
