--- a/css/profile.css
+++ b/css/profile.css
@@ -14,6 +14,7 @@ html {
     list-style: none;
     overflow: hidden;
     border: 2px solid black;
+    background-color: white;
 }
 
 img {
@@ -86,4 +87,11 @@ img {
     border-radius: 42px;
     cursor: pointer;
     padding: 6px 16px;
+}
+
+#olho {
+    position: absolute;
+    max-width: 20%;
+    top: 6em;
+    right: 0em;
 }
