--- a/css/friendlist.css
+++ b/css/friendlist.css
@@ -3,11 +3,10 @@ html {
     height: 100%;
     width: 100%;
     margin: 0;
+    background-color: aliceblue;
 }
 
-/* 
 .glob {
-    text-align: center;
     position: relative;
     z-index: 98;
     border-radius: 50%;
@@ -15,23 +14,25 @@ html {
     width: 232.2px;
     list-style: none;
     overflow: hidden;
-    border: 2px solid black;
-    background-color: white;
-} */
+    display: flex;
+    flex-direction: row;
+    border: 1px solid black;
+}
 
 #return {
     position: absolute;
     width: 116px;
-    height: 28px;
+    height: 1px;
     top: 200px;
     right: 60px;
 }
 
 #return img {
-    max-width: 150%;
+    width: 150%;
+    height: auto;
 }
 
-#button {
+button {
     max-width: 50%;
     height: auto;
     display: block;
@@ -43,55 +44,52 @@ html {
     padding: 6px 16px;
 }
 
-/* #list {
+#addFriend {
+    position: relative;
+    width: 10%;
     height: auto;
-    width: auto
+    display: block;
+    margin: auto;
+    border: 0px;
+    background-color: transparent;
+    border-radius: 42px;
+    cursor: pointer;
+    padding: 6px 16px;
+    right: -0.5em;
+
+}
+
+#addFriend img {
+    width: 2em;
+    height: auto;
+    right: 1em;
 }
 
 
-#amigos {
-    position: relative;
-    text-align: center;
-    list-style: none;
-    background-color: red;
-    top: 50px;
-} */
 
-/****************************************************************/
 ul {
     list-style: none;
+    margin-top: 2em;
+    margin-left: 1em;
 }
 
 li {
-    display: block;
-    width: 200px;
-    height: 70px;
-    padding: 20px;
-    padding-left: 80px;
-    font-size: 28px;
+    width: 90px;
+    height: 10px;
+    padding: 10px;
+    padding-left: 10px;
+    font-size: 0.8em;
     color: #fff;
     background: dodgerblue;
     margin: 10px 0;
+    margin-bottom: 5px;
     position: relative;
+    text-align: right;
+
 }
 
-li:after {
-    position: absolute;
-    content: "";
-    width: 100px;
-    height: 100px;
-    background: #fff;
-    border: 5px solid dodgerblue;
-    border-radius: 50%;
-    top: 0px;
-    left: -50px;
-}
-
-ul:before {
-    content: "";
-    position: absolute;
-    width: 5px;
-    height: 500px;
-    background: #fff;
-    border: 2px solid dodgerblue;
+img {
+    width: 20%;
+    height: auto;
+    position: relative;
 }
