--- a/css/profile.css
+++ b/css/profile.css
@@ -7,14 +7,9 @@ html {
 
 .glob {
     position: relative;
-    z-index: 98;
-    border-radius: 50%;
-    height: 232.2px;
-    width: 232.2px;
-    list-style: none;
-    overflow: hidden;
-    border: 2px solid black;
     background-color: white;
+    height: 14.525em;
+    width: 14.525em;
 }
 
 img {
