--- a/css/addFriend.css
+++ b/css/addFriend.css
@@ -47,7 +47,7 @@ button {
 
 #inFriend {
     position: absolute;
-    top: 10em;
+    top: 8.7em;
     right: 6em;
     width: 30%;
     height: 30%;
@@ -65,10 +65,35 @@ button {
 
 #addForm {
     position: relative;
-    top: 3em;
+    top: 0em;
     margin-bottom: 1em;
+    width: 70%;
+    height: 70%;
+    left: 2.3em;
 }
 
 #info {
-    margin-bottom: -5em;
+    margin-bottom: -2em;
+}
+
+#InId {
+    position: relative;
+    top: -0.7em;
+}
+
+#InName {
+    position: relative;
+    top: 1em;
+}
+
+#info,
+#id {
+    position: relative;
+    width: 70%;
+    height: auto;
+}
+
+#id {
+    top: -2em;
+    margin-top: -4em;
 }
