--- a/css/friendlist.css
+++ b/css/friendlist.css
@@ -73,6 +73,9 @@ ul {
     margin-top: 2em;
     margin-left: 1em;
     left: 0.5em;
+    overflow-y: scroll;
+    height: 10em;
+
 }
 
 li {
@@ -103,4 +106,23 @@ img {
 li p {
     position: relative;
     top: -2.7em;
+}
+
+::-webkit-scrollbar {
+    width: 4px;
+}
+
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
