Co-authored-by: fc58192 <fc58192@alunos.fc.ul.pt>

--- a/css/friendlist.css
+++ b/css/friendlist.css
@@ -60,6 +60,12 @@ button {
 
 }
 
+#previous {
+    position: relative;
+    top: -1em;
+}
+
+
 #addFriend img {
     width: 2em;
     height: auto;
