--- a/css/profile.css
+++ b/css/profile.css
@@ -62,24 +62,26 @@ img {
 
 #return {
     position: absolute;
-    width: 116px;
-    height: 28px;
-    top: 200px;
-    right: 60px;
+    width: 10em;
+    height: 10em;
+    top: 12em;
+    right: 2.5em;
 }
 
 #return img {
-    max-width: 150%;
+    position: relative;
+    width: 6em;
+    height: 3em;
+    top: -0.5em;
 }
 
 #button {
-    max-width: 50%;
     height: auto;
     display: block;
     margin: auto;
     border: 0px;
     background-color: transparent;
-    border-radius: 42px;
+    border-radius: 2.625em;
     cursor: pointer;
     padding: 6px 16px;
 }
@@ -92,5 +94,69 @@ img {
 }
 
 #pfp {
+    border-radius: 50%;
+}
+
+#removeDiv {
+    position: relative;
+    display: none;
+    top: -15.5em;
+    background-color: white;
+    height: 14.525em;
+    width: 14.525em;
+}
+
+#removeDiv p {
+    position: relative;
+    text-align: center;
+    top: 4em;
+}
+
+#removeDiv button {
+    position: relative;
+    max-width: 50%;
+    height: auto;
+    margin: auto;
+    border: 0px;
+    background-color: transparent;
+    border-radius: 2.625em;
+    cursor: pointer;
+    padding: 6px 16px;
+}
+
+#Accept {
+    right: 1em;
+    top: 4em;
+}
+
+#Decline {
+    right: -10em;
+    top: -1.2em;
+}
+
+#remove {
+    position: relative;
+    max-width: 50%;
+    height: auto;
+    width: auto;
+    display: block;
+    margin: auto;
+    border: 1px solid black;
+    background-color: transparent;
+    border-radius: 40px;
+    cursor: pointer;
+    padding: 6px 16px;
+    top: -5.7em;
+    right: -9.5em;
+}
+
+#remove img {
+    position: relative;
+    width: 5em;
+    height: 2.2em;
+    right: 2em;
+}
+
+#pfp1 {
     border-radius: 50%;
 }
