Co-authored-by: fc58192 <fc58192@alunos.fc.ul.pt>

--- a/css/mapFilterMultibanco.css
+++ b/css/mapFilterMultibanco.css
@@ -38,9 +38,10 @@ html {
 
 #return {
     position: absolute;
-    width: 100%;
+    width: 85%;
     height: auto;
-    top: 195px;
+    top: 11.8em;
+    right: 1em;
 }
 
 #button {
